Se actualiza payments

--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,4 @@ STRIPE_CANCEL_URL= 'http://localhost:3003/payments/cancel'
 # ESTE ES EL SIGNING SECRET DEL WEBHOK
 #https://dashboard.stripe.com/test/webhooks/we_1PAdt3AZi2sFv9inek6KyyI8
 STRIPE_ENDPOINT_SECRET = '';
+NATS_SERVERS="nats://localhost:4222,nats://localhost:4223"
