--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ STRIPE_CANCEL_URL= 'http://localhost:3003/payments/cancel'
 # ESTE ES EL SIGNING SECRET DEL WEBHOK
 #https://dashboard.stripe.com/test/webhooks/we_1PAdt3AZi2sFv9inek6KyyI8
 STRIPE_ENDPOINT_SECRET = 'whsec_QkEM9QnJVMVtJuneUm2oqQTsqq3t7k1f';
+
+NATS_SERVERS="nats://localhost:4222,nats://localhost:4223"
